2009-08-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Add id_agente to tagente_estado when
	  creating a new module.

	* lib/PandoraFMS/DataServer.pm: Added support for inventory XML files.

	* lib/PandoraFMS/Tools.pm: Moved get_tag_value function from
	  DataServer.pm to Tools.pm.

2009-07-30  Manuel Arostegui  <manuel@todo-linux.com>

	* SLES10/pandora_wmi, pandora_plugin, pandora_prediction
	pandora_snmpconsole, pandora_recon, pandora_server
	pandora_network: Deleted from repository. We don't need these
	 scripts anymore.

2009-07-24  Jorge Gonzalez  <jorgegonz@artica.es>

	* util/pandora_exec: added execution permision to plugin server.

2009-07-10  Manuel Arostegui <manuel@todo-linux.com>

	* pandora_server.spec: Changed the architecture, changed the
	release, the "_" was a mistake.

	* pandora_server: Added chkconfig handling.

2009-07-09  Manuel Arostegui <manuel@todo-linux.com>

	* pandora_server.spec: Removed unnecessary dependency.

2009-07-08  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm: Properly set the new agentaccess
	  config option. Fixes bug #2815878.

	* util/pandora_xml_stress.pl: Fixed config file comment detection.

2009-06-30  Manuel Arostegui <marostegui@artica.es>

	* pandora_server.spec: Now it builds packages for SLE9.

2009-06-30  Manuel Arostegui <marostegui@artica.es>

	* pandora_server.spec: Rewriten to fit 3.0 requirements.
	Succesfully built packages for: CentOS5, Fedora 11, RHEL5.Still
	needs some tests in SuSe.

2009-06-23  Sancho Lerena <slerena@artica.es>
	
	* lib/pandoraFMS/DataServer.pm, Config.pm: Fixes bug #2811605. This
	add a new config token to define max files queued to avoid problems
	reading incoming dir with huge number of files.

	* lib/PandoraFMS/Core.pm: Adds new feature to have optional agent
	access graph & data. Included to improve the performance in huge systems

2009-06-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Small fixes to compound alert and event